--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,23 +45,6 @@
         <incode-platform.version>1.17.0</incode-platform.version>
         <isis-metamodel-paraname8.version>${incode-platform.version}</isis-metamodel-paraname8.version>
 
-        <isis-module-audit.version>${incode-platform.version}</isis-module-audit.version>
-        <isis-module-command.version>${incode-platform.version}</isis-module-command.version>
-        <isis-module-docx.version>${incode-platform.version}</isis-module-docx.version>
-        <isis-module-excel.version>${incode-platform.version}</isis-module-excel.version>
-        <isis-module-fakedata.version>${incode-platform.version}</isis-module-fakedata.version>
-        <isis-module-poly.version>${incode-platform.version}</isis-module-poly.version>
-        <isis-module-security.version>${incode-platform.version}</isis-module-security.version>
-        <isis-module-sessionlogger.version>${incode-platform.version}</isis-module-sessionlogger.version>
-        <isis-module-servletapi.version>${incode-platform.version}</isis-module-servletapi.version>
-        <isis-module-stringinterpolator.version>${incode-platform.version}</isis-module-stringinterpolator.version>
-        <isis-module-togglz.version>${incode-platform.version}</isis-module-togglz.version>
-
-        <isis-wicket-excel.version>${incode-platform.version}</isis-wicket-excel.version>
-        <isis-wicket-fullcalendar2.version>${incode-platform.version}</isis-wicket-fullcalendar2.version>
-        <isis-wicket-gmap3.version>${incode-platform.version}</isis-wicket-gmap3.version>
-
-        <isis-module-settings.version>1.15.1.1</isis-module-settings.version>
         <incode-module-note.version>1.15.1.1</incode-module-note.version>
         <incode-module-commchannel.version>1.15.1.1</incode-module-commchannel.version>
 
@@ -135,43 +118,43 @@
             <dependency>
                 <groupId>org.isisaddons.module.audit</groupId>
                 <artifactId>isis-module-audit-dom</artifactId>
-                <version>${isis-module-audit.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.command</groupId>
                 <artifactId>isis-module-command-dom</artifactId>
-                <version>${isis-module-command.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.docx</groupId>
                 <artifactId>isis-module-docx-dom</artifactId>
-                <version>${isis-module-docx.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.excel</groupId>
                 <artifactId>isis-module-excel-dom</artifactId>
-                <version>${isis-module-excel.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.fakedata</groupId>
                 <artifactId>isis-module-fakedata-dom</artifactId>
-                <version>${isis-module-fakedata.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.poly</groupId>
                 <artifactId>isis-module-poly-dom</artifactId>
-                <version>${isis-module-poly.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.security</groupId>
                 <artifactId>isis-module-security-dom</artifactId>
-                <version>${isis-module-security.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mindrot</groupId>
@@ -182,31 +165,31 @@
             <dependency>
                 <groupId>org.isisaddons.module.servletapi</groupId>
                 <artifactId>isis-module-servletapi-dom</artifactId>
-                <version>${isis-module-servletapi.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.sessionlogger</groupId>
                 <artifactId>isis-module-sessionlogger-dom</artifactId>
-                <version>${isis-module-sessionlogger.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.isisaddons.module.settings</groupId>
-                <artifactId>isis-module-settings-dom</artifactId>
-                <version>${isis-module-settings.version}</version>
+                <groupId>org.incode.module.settings</groupId>
+                <artifactId>incode-module-settings-dom</artifactId>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.stringinterpolator</groupId>
                 <artifactId>isis-module-stringinterpolator-dom</artifactId>
-                <version>${isis-module-stringinterpolator.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.module.togglz</groupId>
                 <artifactId>isis-module-togglz-glue</artifactId>
-                <version>${isis-module-togglz.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
@@ -234,32 +217,34 @@
             <dependency>
                 <groupId>org.isisaddons.wicket.excel</groupId>
                 <artifactId>isis-wicket-excel-cpt</artifactId>
-                <version>${isis-wicket-excel.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.wicket.fullcalendar2</groupId>
                 <artifactId>isis-wicket-fullcalendar2-cpt</artifactId>
-                <version>${isis-wicket-fullcalendar2.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.isisaddons.wicket.gmap3</groupId>
                 <artifactId>isis-wicket-gmap3-cpt</artifactId>
-                <version>${isis-wicket-gmap3.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
+<!--
             <dependency>
                 <groupId>org.incode.module.commchannel</groupId>
                 <artifactId>incode-module-commchannel-dom</artifactId>
-                <version>${incode-module-commchannel.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.incode.module.note</groupId>
                 <artifactId>incode-module-note-dom</artifactId>
-                <version>${incode-module-note.version}</version>
+                <version>${incode-platform.version}</version>
             </dependency>
+-->
 
         </dependencies>
     </dependencyManagement>
