--- a/backend/app/pom.xml
+++ b/backend/app/pom.xml
@@ -76,8 +76,27 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>contactapp-fixture</artifactId>
+            <artifactId>contactapp-dom</artifactId>
         </dependency>
+
+<!--
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-metamodel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.isisaddons.module.fakedata</groupId>
+            <artifactId>isis-module-fakedata-dom</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+-->
+
+
         <dependency>
             <groupId>org.apache.isis.core</groupId>
             <artifactId>isis-core-wrapper</artifactId>
