--- a/backend/integtests/pom.xml
+++ b/backend/integtests/pom.xml
@@ -87,17 +87,11 @@
             <scope>test</scope>
         </dependency>
 
-<!--
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <groupId>org.isisaddons.module.fakedata</groupId>
+            <artifactId>isis-module-fakedata-dom</artifactId>
+            <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-        </dependency>
--->
 
         <dependency>
             <groupId>org.togglz</groupId>
