--- a/backend/dom/pom.xml
+++ b/backend/dom/pom.xml
@@ -28,7 +28,7 @@
     <name>Incode App ContactApp DOM</name>
 
     <properties>
-        <isis-maven-plugin.validate.appManifest>org.incode.eurocommercial.contactapp.dom.ContactAppDomManifest</isis-maven-plugin.validate.appManifest>
+        <isis-maven-plugin.validate.appManifest>org.incode.eurocommercial.contactapp.module.ContactAppDomManifest</isis-maven-plugin.validate.appManifest>
     </properties>
 
 
@@ -49,6 +49,18 @@
                 </excludes>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <filtering>false</filtering>
+                <directory>src/test/java</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>com.github.odavid.maven.plugins</groupId>
@@ -101,15 +113,6 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- test -->
-        <dependency>
-            <groupId>org.apache.isis.mavendeps</groupId>
-            <artifactId>isis-mavendeps-testing</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
-
-
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-core</artifactId>
@@ -124,12 +127,6 @@
         <dependency>
             <groupId>org.isisaddons.module.excel</groupId>
             <artifactId>isis-module-excel-dom</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.isisaddons.module.fakedata</groupId>
-            <artifactId>isis-module-fakedata-dom</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -182,17 +179,21 @@
             <artifactId>isis-wicket-gmap3-cpt</artifactId>
         </dependency>
 
-<!--
+        <!-- test -->
         <dependency>
-            <groupId>org.incode.module.commchannel</groupId>
-            <artifactId>incode-module-commchannel-dom</artifactId>
+            <groupId>org.apache.isis.mavendeps</groupId>
+            <artifactId>isis-mavendeps-testing</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
         </dependency>
 
+
         <dependency>
-            <groupId>org.incode.module.note</groupId>
-            <artifactId>incode-module-note-dom</artifactId>
+            <groupId>org.isisaddons.module.fakedata</groupId>
+            <artifactId>isis-module-fakedata-dom</artifactId>
+            <scope>test</scope>
         </dependency>
--->
+
 
     </dependencies>
 
