--- a/backend/app/pom.xml
+++ b/backend/app/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.incode.app</groupId>
         <artifactId>contactapp</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>contactapp-app</artifactId>
