--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -307,5 +307,28 @@
             </pluginRepositories>
         </profile>
 
+        <profile>
+            <id>docker-deploy</id>
+            <activation>
+                <property>
+                    <name>docker-deploy</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- disable deploy for *this* parent pom, but not for child module -->
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <modules>
+                <module>webapp</module>
+            </modules>
+        </profile>
+
     </profiles>
 </project>
