--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,24 @@
 
     <packaging>pom</packaging>
 
-    <modules>
-        <module>backend</module>
-    </modules>
+
+    <properties>
+        <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+    </properties>
 
     <profiles>
+        <profile>
+            <id>default-modules</id>
+            <activation>
+                <property>
+                    <name>!docker-deploy</name>
+                </property>
+            </activation>
+            <modules>
+                <module>backend</module>
+            </modules>
+        </profile>
+
         <profile>
             <id>docker-deploy</id>
             <activation>
@@ -44,6 +57,7 @@
                     <plugin>
                         <!-- disable deploy for *this* parent pom, but not for child module -->
                         <artifactId>maven-deploy-plugin</artifactId>
+                        <version>${maven-deploy-plugin.version}</version>
                         <configuration>
                             <skip>true</skip>
                         </configuration>
