--- a/backend/webapp/pom.xml
+++ b/backend/webapp/pom.xml
@@ -35,8 +35,7 @@
     <properties>
         <maven-war-plugin.warName>${project.parent.artifactId}</maven-war-plugin.warName>
 
-        <!--<docker-plugin.imageName>incodehq/${project.parent.artifactId}</docker-plugin.imageName>-->
-        <docker-plugin.imageName>rkalis/contactapp</docker-plugin.imageName>
+        <docker-plugin.imageName>incodehq/${project.parent.artifactId}</docker-plugin.imageName>
 
         <docker-plugin.resource.include>${maven-war-plugin.warName}.war</docker-plugin.resource.include>
         <docker-plugin.serverId>docker-hub</docker-plugin.serverId>
