--- a/backend/webapp/src/main/resources-filtered/docker/Dockerfile
+++ b/backend/webapp/src/main/resources-filtered/docker/Dockerfile
@@ -20,9 +20,16 @@
 
 
 
-FROM incodehq/tomcat:1.7.2
+#FROM incodehq/tomcat:1.7.2
+#ADD ${docker-plugin.resource.include} ${DEPLOYMENT_DIR}/ROOT.war
+#ADD entrypoint.sh /
+#RUN chmod 755 /entrypoint.sh
+#CMD /entrypoint.sh
+#EXPOSE 8080
+
+
+FROM incodehq/tomcat:1.7
 ADD ${docker-plugin.resource.include} ${DEPLOYMENT_DIR}/ROOT.war
-ADD entrypoint.sh /
-RUN chmod 755 /entrypoint.sh
-CMD /entrypoint.sh
+RUN mkdir -p $CATALINA_HOME/conf/Catalina/localhost && \
+    ln -sf /run/secrets/contactapp.test.app.context.xml $CATALINA_HOME/conf/Catalina/localhost/ROOT.xml
 EXPOSE 8080
