Adding postgres driver to POM and commenting out the footer

--- a/backend/webapp/pom.xml
+++ b/backend/webapp/pom.xml
@@ -258,6 +258,13 @@
                     <artifactId>sqljdbc4</artifactId>
                     <version>4.0</version>
                 </dependency>
+
+                <dependency>
+                    <groupId>postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <version>9.1-901.jdbc4</version>
+                </dependency>
+
             </dependencies>
         </profile>
     </profiles>
