Cleaning up properties a-la ECPCRM style

--- a/backend/webapp/src/main/webapp/WEB-INF/shiro.ini
+++ b/backend/webapp/src/main/webapp/WEB-INF/shiro.ini
@@ -23,6 +23,9 @@
 #######
 # isisModuleSecurityRealm
 #######
+
+builtInCacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
+securityManager.cacheManager = $builtInCacheManager
 isisModuleSecurityRealm=org.isisaddons.module.security.shiro.IsisModuleSecurityRealm
 
 authenticationStrategy=org.isisaddons.module.security.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
