--- a/backend/app/src/main/java/org/incode/eurocommercial/contactapp/app/isis-non-changing.properties
+++ b/backend/app/src/main/java/org/incode/eurocommercial/contactapp/app/isis-non-changing.properties
@@ -54,3 +54,5 @@ isis.viewer.wicket.themes.showChooser=true
 isis.viewer.wicket.themes.enabled=bootstrap-theme,Cosmo,Flatly,Darkly,Sandstone,United
 isis.viewer.wicket.disableDependentChoiceAutoSelection=false
 isis.viewer.restfulobjects.RestfulObjectsSpecEventSerializer.baseUrl=http://localhost:8080/restful/
+
+isis.services.translation.po.mode=read
