--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,5 +58,5 @@ release:
       IMAGE_TAG=$(cat IMAGE_TAG)
     - >
       docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY:ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG
+    - docker build -t $CI_REGISTRY/ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG .
     - docker push $CI_REGISTRY:ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG
