--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,4 +59,4 @@ release:
     - >
       docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG .
-    - docker push $CI_REGISTRY:ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG
+    - docker push     $CI_REGISTRY/ecpnv.devops/apps/contactapp/contactapp:$IMAGE_TAG
